--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,11 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.OCI_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          # ssh-keyscan -H ${{ secrets.OCI_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.OCI_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy to OCI Instance
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.OCI_HOST }} "
+          ssh ubuntu@${{ secrets.OCI_HOST }} "
             cd ~/projects/portfolio-2025 &&
             git fetch origin &&
             git reset --hard origin/main &&
