use EOF formatting instead for deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,11 @@ jobs:
 
       - name: Deploy to OCI Instance
         run: |
-          ssh ubuntu@${{ secrets.OCI_HOST }} "
-            cd ~/projects/portfolio-2025 &&
-            git fetch origin &&
-            git reset --hard origin/main &&
-            chmod +x ./runserver.sh &&
+          ssh ubuntu@${{ secrets.OCI_HOST }} << 'EOF'
+            cd ~/projects/portfolio-2025
+            git fetch origin
+            git reset --hard origin/main
+            chmod +x ./runserver.sh
             ./runserver.sh
-          "
+          EOF
+
