--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -13,6 +13,16 @@ http {
         server client:3000;
     }
     server {
+        listen 80;
+        listen [::]:80;
+        server_name justin-lee.me;
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
         listen 443 default_server ssl http2;
         listen [::]:443 ssl http2;
         server_name justin-lee.me;
