--- a/nginx.cert.conf
+++ b/nginx.cert.conf
@@ -12,7 +12,7 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name justin-lee.me;
+        server_name justinlee.dev;
         server_tokens off;
 
         location /.well-known/acme-challenge/ {
@@ -20,7 +20,7 @@ http {
         }
 
         location / {
-            return 301 https://justin-lee.me$request_uri;
+            return 301 https://justinlee.dev$request_uri;
         }
     }
 }
