--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -15,7 +15,7 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name justin-lee.me;
+        server_name justinlee.dev;
 
         location / {
             return 301 https://$host$request_uri;
@@ -25,10 +25,10 @@ http {
     server {
         listen 443 default_server ssl http2;
         listen [::]:443 ssl http2;
-        server_name justin-lee.me;
+        server_name justinlee.dev;
 
-        ssl_certificate /etc/nginx/ssl/live/justin-lee.me/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/live/justin-lee.me/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/live/justinlee.dev/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/live/justinlee.dev/privkey.pem;
         location / {
             proxy_pass http://client_upstream;
             proxy_set_header Host $http_host;
